--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@ a {
     color: inherit;
 }
 a:hover{
-    color: #919191;
+    color: #6a6765;
 }
 header {
     height: 187px;
@@ -20,8 +20,6 @@ header {
 }
 nav {
     background-color: #FFAD93;
-    margin: 0;
-
 }
 nav ul {
     list-style: none;
@@ -42,8 +40,10 @@ nav ul li {
 }
 footer {
     background-color: #FFAD93;
-    min-height: 60px;
-    padding: 40px;
+    min-height: 30px;
+    padding: 50px;
+    text-align: center;
+
 }
 .container{
     max-width: 800px;
